# svgap

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: collaboration.yml  production_question.yml  run_report.yml
.github/workflows/: ci.yml  docs.yml  release.yml
artifacts/independent-review-v0.1/: Candidate-review.csv  REPOSITORY-RISK-REVIEW.md  REVIEWER-ATTESTATION.md  Seshu-witness-review.csv
artifacts/reset-replication-v0.1/: LICENSE.generated-rtl  README.md  manifest.json
challenges/v0.1/: README.md
challenges/v0.1/diagnosis/: prompt.md
challenges/v0.1/repair/: prompt.md
challenges/v0.1/repair/starter/: prompt.md  task.toml  tb.sv
docs/: artifact-release-policy.md  bring-your-own-rtl.md  category-expansion-xprop-metastability.md  ci-and-container.md  collaboration-rfc.md  community-pulse.md  controlled-result.md  cross-oracle-naja-result.md  design-partner-workflow.md  evaluate-your-model.md  experiment-contract-template.md  frontier-model-research.md  harbor.md  independent-adjudication.md  independent-review-result.md  index.md  integrating-existing-benchmarks.md  launch-kit.md  limitations.md  linux-install-and-doctor.md  methodology.md  perturbation-adjudication.md  power-on-benchmark-audit.md  prior-art-and-positioning.md  python-api.md  reference-naja-backend.md  release-notes-v0.3.0-alpha.1.md  release-notes-v0.3.0-alpha.10.md  release-notes-v0.3.0-alpha.11.md  release-notes-v0.3.0-alpha.2.md  release-notes-v0.3.0-alpha.3.md  release-notes-v0.3.0-alpha.5.md  release-notes-v0.3.0-alpha.6.md  release-notes-v0.3.0-alpha.8.md  release-readiness.md  reset-replication-result.md  results.md  rtl-designer-review-protocol.md  starter-issues.md  submitting-results.md  (+3 more)
docs/result-profiles/: codex-gpt-5.5-reset-v02-01.md  openweights-deepseek-coder-v2-16b-reset-v02.md  openweights-qwen25-coder-7b-reset-v02.md
examples/: README.md
integrations/harbor/: build_reset_release.py  validate_reset_release_witnesses.sh
integrations/harbor/svgap-reset-release/: README.md  dataset.toml  provenance.json
integrations/harbor/svgap-reset-release/reset-config/: README.md  instruction.md  task.toml
integrations/harbor/svgap-reset-release/reset-counter/: README.md  instruction.md  task.toml
integrations/harbor/svgap-reset-release/reset-credits/: README.md  instruction.md  task.toml
integrations/harbor/svgap-reset-release/reset-events/: README.md  instruction.md  task.toml
media/onboarding/: README.md  captions.vtt  recording-checklist.md  script.md  terminal-session.txt
results/: README.md  registry-v1.json
results/baselines/v0.1/: README.md
results/submissions/: README.md
results/submissions/codex-gpt-5.5-reset-v02-01/: submission.json  summary.json
schemas/: result-registry-v1.json  submission-v1.json  synthetic-review-v1.json
scripts/: analyze_synthetic_review.py  build_adoption_baseline.py  build_blinded_adjudication.py  build_result_pages.py  build_synthetic_calibration.py  check_docs_links.py  evaluate_saved_responses.py  export_public_artifacts.py  gen_readme_demo_gif.py  run_challenge_command.py  run_generation_pilot.py  run_synthetic_review.py  verify_public_artifacts.py  verify_result_registry.py  verify_synchronizer_bypass.py
src/svgap/: __init__.py  api.py  cli.py  demo.py  reporting.py  study_runner.py  submission.py
src/svgap/backends/: base.py  reference_naja.py  reference_yosys.py  registry.py
src/svgap/demo_assets/: tb.sv
taskpacks/reset-replication-v0.1/: freeze.json
taskpacks/reset-replication-v0.2/: freeze.json
tests/: test_api.py  test_backends.py  test_check_fail_on.py  test_demo.py  test_doctor.py  test_generation_command.py  test_harbor_score.py  test_legibility_onboarding.py  test_reference_naja.py  test_reporting.py  test_result_registry.py  test_schema.py  test_study_runner.py  test_submission.py  test_synthetic_review.py
(+391 files in other folders)
