[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "svgap"
version = "0.1.0a1"
description = "Production-readiness evaluation for AI-generated RTL"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Shraddha Sridhar", email = "shsridhar@nvidia.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Repository = "https://github.com/shsridhar-beep/svgap"
Issues = "https://github.com/shsridhar-beep/svgap/issues"

[project.optional-dependencies]
dev = ["jsonschema>=4.23,<5"]

[project.scripts]
svgap = "svgap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
