[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "svgap"
version = "0.3.0a10"
description = "Production-evidence profiles for AI-generated digital RTL"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Shraddha Sridhar", email = "shsridhar@nvidia.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Repository = "https://github.com/shsridhar-beep/svgap"
Documentation = "https://shsridhar-beep.github.io/svgap/"
Issues = "https://github.com/shsridhar-beep/svgap/issues"
"Research collaboration" = "https://shsridhar-beep.github.io/svgap/design-partner-workflow/"
Changelog = "https://github.com/shsridhar-beep/svgap/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["jsonschema>=4.23,<5"]
docs = ["mkdocs-material>=9.6,<10"]
# najaeda ships platform-specific compiled wheels (bundled slang frontend and
# SNL engine). The floor is 0.7.16: SNLDesign.isMux() needs >= 0.7.13, and
# 0.7.16 is where diagnostics_report_path=None means console-only and no
# performance report is written unless NAJA_PERF is set. Pre-1.0 minor bumps
# signal API drift, hence the < 0.8 ceiling.
naja = ["najaeda>=0.7.16,<0.8"]

[project.scripts]
svgap = "svgap.cli:main"

[project.entry-points."svgap.backends"]
reference-yosys = "svgap.backends.reference_yosys:ReferenceYosysBackend"
reference-naja = "svgap.backends.reference_naja:ReferenceNajaBackend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
svgap = [
  "demo_assets/**/*.sv",
  "demo_assets/**/*.toml",
  "harbor_profiles/*.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
